# RasterIX

./: CMakeLists.txt  CMakePresets.json  README.md  design.md  format-all.sh
example/: CMakeLists.txt
example/platformio/: main.cpp
example/qtDebug/qtRasterizerFpga/: mainwindow.cpp  mainwindow.h  qtRasterizerFpga.pro
example/util/native/: Runner.hpp
example/util/rp-pico/: Runner.hpp
example/vbo/: CMakeLists.txt  VboExample.hpp  main.cpp
lib/driver/: CMakeLists.txt
lib/gl/: CMakeLists.txt  Enums.hpp  IBusConnector.hpp  IThreadRunner.hpp  ImageConverter.hpp  MipMapGenerator.hpp  RIXGL.cpp  RIXGL.hpp  RenderConfigs.hpp  TextureConverter.hpp  VertexParameter.hpp  gl.cpp  gl.h  glHelpers.hpp  glImpl.cpp  glImpl.h  glTypeConverters.h  maxVariantAlternativeSize.hpp
lib/gl/math/: Mat44.hpp  Vec.hpp  Veci.hpp
lib/gl/opengl/: Helpers.hpp  TypeConverters.hpp  glAccum.cpp  glActiveStencilFaceEXT.cpp  glActiveTexture.cpp  glAlphaFunc.cpp  glAreTexturesResident.cpp  glArrayElement.cpp  glBegin.cpp  glBindBuffer.cpp  glBindTexture.cpp  glBitmap.cpp  glBlendEquation.cpp  glBlendFunc.cpp  glBlendFuncSeparate.cpp  glBufferData.cpp  glBufferSubData.cpp  glCallList.cpp  glClear.cpp  glClearAccum.cpp  glClearColor.cpp  glClearDepth.cpp  glClearIndex.cpp  glClearStencil.cpp  glClientActiveTexture.cpp  glClipPlane.cpp  glColor.cpp  glColorMask.cpp  glColorMaterial.cpp  glColorPointer.cpp  glCompressedTexImage.cpp  glCompressedTexSubImage.cpp  glCopyPixels.cpp  glCopyTexImage.cpp  glCopyTexSubImage.cpp  glCullFace.cpp  glDeleteBuffers.cpp  glDeleteLists.cpp  glDeleteTextures.cpp  glDepthFunc.cpp  (+124 more)
lib/gl/pixelpipeline/: FeatureEnable.hpp  Fogging.cpp  Fogging.hpp  FragmentPipeline.hpp  PixelPipeline.cpp  PixelPipeline.hpp  Texture.cpp  Texture.hpp
lib/gl/renderer/: IDevice.hpp  Rasterizer.cpp  Renderer.cpp  Renderer.hpp  TextureMemoryManager.hpp  TextureObject.hpp
lib/gl/renderer/commands/: CommandVariant.hpp  DataTransferCmdBase.hpp  DisplayListCommand.hpp  DrawNewElementCmd.hpp  FogLutStreamCmd.hpp  FramebufferCmd.hpp  NopCmd.hpp  Op.hpp  PushVertexCmd.hpp  SetElementGlobalCtxCmd.hpp  SetElementLocalCtxCmd.hpp  SetLightingCtxCmd.hpp  SetVertexCtxCmd.hpp  TextureStreamCmd.hpp  TriangleStreamCmd.hpp  WriteRegisterCmd.hpp
lib/gl/renderer/devicedatauploader/: DeviceDataUploader.cpp  DeviceDataUploader.hpp  DeviceDataUploaderCommands.hpp
lib/gl/renderer/displaylist/: DisplayList.hpp  DisplayListAssembler.hpp  DisplayListDisassembler.hpp  DisplayListDispatcher.hpp  RIXDisplayListAssembler.hpp  TextureLoadOptimizer.hpp
lib/gl/renderer/dse/: DmaStreamEngine.cpp  DmaStreamEngine.hpp  DmaStreamEngineCommands.hpp
lib/gl/renderer/registers/: BaseColorReg.hpp  BaseSingleReg.hpp  ColorBufferAddrReg.hpp  DepthBufferAddrReg.hpp  FeatureEnableReg.hpp  FragmentPipelineReg.hpp  RegisterVariant.hpp  RenderResolutionReg.hpp  StencilBufferAddrReg.hpp  StencilReg.hpp  TexEnvColorReg.hpp  TexEnvReg.hpp  TmuTextureReg.hpp
lib/gl/renderer/softwarerasterizer/: AttributeInterpolator.cpp  AttributeInterpolator.hpp  BlendFunc.cpp  BlendFunc.hpp  Fog.cpp  Fog.hpp  FragmentData.hpp  Framebuffer.hpp  InterpolatedAttributesData.hpp  LogicOp.cpp  LogicOp.hpp  Rasterizer.cpp  Rasterizer.hpp  ResolutionData.hpp  ScissorData.hpp  SoftwareRasterizer.cpp  SoftwareRasterizer.hpp  SoftwareRasterizerHelpers.hpp  StencilOp.cpp  StencilOp.hpp  TestFunc.hpp  TexEnv.cpp  TexEnv.hpp  TextureMap.cpp  TextureMap.hpp  TextureMapper.hpp  YOffsetData.hpp
lib/gl/renderer/threadedRasterizer/: DeviceUploadList.hpp  RenderState.hpp  ThreadedRasterizer.hpp
lib/gl/renderer/threadedrasterizer/: DeviceUploadList.hpp  ThreadedRasterizer.hpp
lib/gl/renderer/threadedvertextransformer/: DeviceUploadList.hpp  RenderState.hpp  ThreadedVertexTransformer.hpp
lib/gl/transform/: Clipper.cpp  Clipper.hpp  ClippingHelper.hpp  Culling.cpp  Culling.hpp  ElementGlobalData.hpp  ElementLocalData.hpp  Lighting.cpp  Lighting.hpp  LineAssembly.cpp  LineAssembly.hpp  MatrixStore.cpp  MatrixStore.hpp  PlaneClipper.cpp  PlaneClipper.hpp  PointAssembly.cpp  PointAssembly.hpp  PolygonOffset.cpp  PolygonOffset.hpp  PrimitiveAssembler.cpp  PrimitiveAssembler.hpp  ShadeModel.hpp  Stack.hpp  Stencil.cpp  Stencil.hpp  TexGen.cpp  TexGen.hpp  TransformingVertexParameter.hpp  VertexTransformer.hpp  VertexTransforming.hpp  ViewPort.cpp  ViewPort.hpp
lib/gl/vertexpipeline/: RenderObj.cpp  RenderObj.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexPipeline.cpp  VertexPipeline.hpp  VertexQueue.hpp
lib/glx/: glx.cpp
lib/threadrunner/: MultiThreadRunner.hpp  NoThreadRunner.hpp
lib/utils/: GenericMemoryBusConnector.hpp
lib/wgl/: CMakeLists.txt  gl.def  wgl.cpp
rtl/Display/: DisplayController8BitILI9341.v  DisplayController8BitILI9486.v  DisplayFramebufferReader.v  Dvi.v
rtl/RasterIX/: AttributePerspectiveCorrectionX.v  AxisFramebufferReader.v  AxisFramebufferWriter.v  AxisToAxiAdapter.v  AxisToAxiCrossbar.v  ColorBlender.v  ColorInterpolator.v  ColorMixer.v  ColorMixerSigned.v  CommandParser.v  DmaStreamEngine.v  Fog.v  FrameStreamingCore.v  InternalFramebuffer.v  InternalFramebufferCommandHandler.v  InternalFramebufferRam.v  InternalFramebufferReader.v  InternalFramebufferScissorFunc.vh  InternalFramebufferWriter.v  LinearAddressGenerator.v  LogicOp.v  PerFragmentPipeline.v  PixelPipeline.v  PixelUtil.vh  RasterIX.v  RasterIXCoreEF.v  RasterIXCoreIF.v  RasterIXRenderCore.v  RasterIX_EF.v  RasterIX_IF.v  RegisterAndDescriptorDefines.vh  TexEnv.v  TextureFilter.v  TextureMappingUnit.v
rtl/Util/: Serial2AXIS.v
rtl/top/Verilator/: top.v
unittest/: CMakeLists.txt  Makefile  README.md
unittest/cpp/: general.hpp  sim_AxisFramebufferWriter.cpp  sim_AxisToAxiAdapter.cpp  sim_AxisToAxiCrossbar.cpp  sim_DmaStreamEngine.cpp  sim_InternalFramebufferCommandHandler.cpp  sim_LogicOp.cpp
unittest/software/: CMakeLists.txt  Helper.hpp  test_AttributeInterpolator.cpp  test_BlendFunc.cpp  test_Fog.cpp  test_LogicOp.cpp  test_Rasterizer.cpp  test_StencilOp.cpp  test_TestFunc.cpp  test_TexEnv.cpp  test_TextureMap.cpp
unittest/verilator/: CMakeLists.txt
(+28 files in other folders)
