add_library(gl STATIC
    RIXGL.cpp
    opengl/glAccum.cpp
    opengl/glActiveStencilFaceEXT.cpp
    opengl/glActiveTexture.cpp
    opengl/glAlphaFunc.cpp
    opengl/glAreTexturesResident.cpp
    opengl/glArrayElement.cpp
    opengl/glBegin.cpp
    opengl/glBindBuffer.cpp
    opengl/glBindTexture.cpp
    opengl/glBitmap.cpp
    opengl/glBlendEquation.cpp
    opengl/glBlendFunc.cpp
    opengl/glBlendFuncSeparate.cpp
    opengl/glBufferData.cpp
    opengl/glBufferSubData.cpp
    opengl/glCallList.cpp
    opengl/glClearAccum.cpp
    opengl/glClearColor.cpp
    opengl/glClear.cpp
    opengl/glClearDepth.cpp
    opengl/glClearIndex.cpp
    opengl/glClearStencil.cpp
    opengl/glClientActiveTexture.cpp
    opengl/glClipPlane.cpp
    opengl/glColor.cpp
    opengl/glColorMask.cpp
    opengl/glColorMaterial.cpp
    opengl/glColorPointer.cpp
    opengl/glCompressedTexImage.cpp
    opengl/glCompressedTexSubImage.cpp
    opengl/glCopyPixels.cpp
    opengl/glCopyTexImage.cpp
    opengl/glCopyTexSubImage.cpp
    opengl/glCullFace.cpp
    opengl/glDeleteBuffers.cpp
    opengl/glDeleteLists.cpp
    opengl/glDeleteTextures.cpp
    opengl/glDepthFunc.cpp
    opengl/glDepthMask.cpp
    opengl/glDepthRange.cpp
    opengl/glDisableClientState.cpp
    opengl/glDisable.cpp
    opengl/glDrawArrays.cpp
    opengl/glDrawBuffer.cpp
    opengl/glDrawElements.cpp
    opengl/glDrawPixels.cpp
    opengl/glDrawRangeElements.cpp
    opengl/glEdgeFlag.cpp
    opengl/glEdgeFlagPointer.cpp
    opengl/glEnableClientState.cpp
    opengl/glEnable.cpp
    opengl/glEnd.cpp
    opengl/glEndList.cpp
    opengl/glEvalCoord.cpp
    opengl/glEvalMesh.cpp
    opengl/glEvalPoint.cpp
    opengl/glFeedbackBuffer.cpp
    opengl/glFinish.cpp
    opengl/glFlush.cpp
    opengl/glFog.cpp
    opengl/glFrontFace.cpp
    opengl/glFrustum.cpp
    opengl/glGenBuffers.cpp
    opengl/glGenLists.cpp
    opengl/glGenTextures.cpp
    opengl/glGetBufferParameter.cpp
    opengl/glGetClipPlane.cpp
    opengl/glGetCompressedTexImage.cpp
    opengl/glGet.cpp
    opengl/glGetError.cpp
    opengl/glGetLight.cpp
    opengl/glGetMap.cpp
    opengl/glGetMaterial.cpp
    opengl/glGetPixelMap.cpp
    opengl/glGetPointer.cpp
    opengl/glGetPolygonStripple.cpp
    opengl/glGetString.cpp
    opengl/glGetTexEnv.cpp
    opengl/glGetTexGen.cpp
    opengl/glGetTexImage.cpp
    opengl/glGetTexLevelParameter.cpp
    opengl/glGetTexParameter.cpp
    opengl/glHint.cpp
    opengl/glIndex.cpp
    opengl/glIndexMask.cpp
    opengl/glIndexPointer.cpp
    opengl/glInitNames.cpp
    opengl/glInterleavedArrays.cpp
    opengl/glIsBuffer.cpp
    opengl/glIsEnabled.cpp
    opengl/glIsList.cpp
    opengl/glIsTexture.cpp
    opengl/glLight.cpp
    opengl/glLightModel.cpp
    opengl/glLineStripple.cpp
    opengl/glLineWidth.cpp
    opengl/glListBase.cpp
    opengl/glLoadIdentity.cpp
    opengl/glLoadMatrix.cpp
    opengl/glLoadName.cpp
    opengl/glLoadTransposeMatrix.cpp
    opengl/glLockArrays.cpp
    opengl/glLogicOp.cpp
    opengl/glMap.cpp
    opengl/glMapGrid.cpp
    opengl/glMaterial.cpp
    opengl/glMatrixMode.cpp
    opengl/glMultiTexCoord.cpp
    opengl/glMultMatrix.cpp
    opengl/glMultTransposeMatrix.cpp
    opengl/glNewList.cpp
    opengl/glNormal.cpp
    opengl/glNormalPointer.cpp
    opengl/glOrtho.cpp
    opengl/glPassThrough.cpp
    opengl/glPixelMap.cpp
    opengl/glPixelStore.cpp
    opengl/glPixelTransfer.cpp
    opengl/glPixelZoom.cpp
    opengl/glPointParameter.cpp
    opengl/glPointSize.cpp
    opengl/glPointSizePointerOES.cpp
    opengl/glPolygonMode.cpp
    opengl/glPolygonOffset.cpp
    opengl/glPolygonStripple.cpp
    opengl/glPopAttrib.cpp
    opengl/glPopClientAttrib.cpp
    opengl/glPopMatrix.cpp
    opengl/glPopName.cpp
    opengl/glPrioritizeTextures.cpp
    opengl/glPushAttrib.cpp
    opengl/glPushClientAttrib.cpp
    opengl/glPushMatrix.cpp
    opengl/glPushName.cpp
    opengl/glRasterPos.cpp
    opengl/glReadBuffer.cpp
    opengl/glReadPixels.cpp
    opengl/glRect.cpp
    opengl/glRenderMode.cpp
    opengl/glRotate.cpp
    opengl/glSampleCoverage.cpp
    opengl/glScale.cpp
    opengl/glScissor.cpp
    opengl/glSelectBuffer.cpp
    opengl/glShadeModel.cpp
    opengl/glStencilFunc.cpp
    opengl/glStencilMask.cpp
    opengl/glStencilOp.cpp
    opengl/glTexCoord.cpp
    opengl/glTexCoordPointer.cpp
    opengl/glTexEnv.cpp
    opengl/glTexGen.cpp
    opengl/glTexImage.cpp
    opengl/glTexParameter.cpp
    opengl/glTexSubImage.cpp
    opengl/glTranslate.cpp
    opengl/glUnlockArrays.cpp
    opengl/glVertex.cpp
    opengl/glVertexPointer.cpp
    opengl/glViewPort.cpp
    gl.cpp
    glu.cpp
    vertexpipeline/VertexPipeline.cpp
    vertexpipeline/RenderObj.cpp
    transform/Lighting.cpp
    transform/Clipper.cpp
    transform/TexGen.cpp
    transform/ViewPort.cpp
    transform/MatrixStore.cpp
    transform/Culling.cpp
    transform/PrimitiveAssembler.cpp
    transform/PlaneClipper.cpp
    transform/PolygonOffset.cpp
    transform/Stencil.cpp
    transform/LineAssembly.cpp
    transform/PointAssembly.cpp
    pixelpipeline/PixelPipeline.cpp
    pixelpipeline/Fogging.cpp
    pixelpipeline/Texture.cpp
    renderer/Rasterizer.cpp
    renderer/Renderer.cpp
    renderer/softwarerasterizer/AttributeInterpolator.cpp
    renderer/softwarerasterizer/BlendFunc.cpp
    renderer/softwarerasterizer/Fog.cpp
    renderer/softwarerasterizer/LogicOp.cpp
    renderer/softwarerasterizer/Rasterizer.cpp
    renderer/softwarerasterizer/StencilOp.cpp
    renderer/softwarerasterizer/TexEnv.cpp
    renderer/softwarerasterizer/TextureMap.cpp
    renderer/softwarerasterizer/SoftwareRasterizer.cpp
)

target_link_libraries(gl PRIVATE spdlog::spdlog span)
target_include_directories(gl PUBLIC .)

add_compile_definitions(
    RIX_CORE_TMU_COUNT=${RIX_CORE_TMU_COUNT}
    RIX_CORE_MAX_TEXTURE_SIZE=${RIX_CORE_MAX_TEXTURE_SIZE}
    RIX_CORE_ENABLE_MIPMAPPING=${RIX_CORE_ENABLE_MIPMAPPING}
    RIX_CORE_MAX_DISPLAY_WIDTH=${RIX_CORE_MAX_DISPLAY_WIDTH}
    RIX_CORE_MAX_DISPLAY_HEIGHT=${RIX_CORE_MAX_DISPLAY_HEIGHT}
    RIX_CORE_FRAMEBUFFER_SIZE_IN_PIXEL_LG=${RIX_CORE_FRAMEBUFFER_SIZE_IN_PIXEL_LG}
    RIX_CORE_USE_FLOAT_INTERPOLATION=${RIX_CORE_USE_FLOAT_INTERPOLATION}
    RIX_CORE_NUMBER_OF_TEXTURE_PAGES=${RIX_CORE_NUMBER_OF_TEXTURE_PAGES}
    RIX_CORE_NUMBER_OF_TEXTURES=${RIX_CORE_NUMBER_OF_TEXTURES}
    RIX_CORE_TEXTURE_PAGE_SIZE=${RIX_CORE_TEXTURE_PAGE_SIZE}
    RIX_CORE_GRAM_MEMORY_LOC=${RIX_CORE_GRAM_MEMORY_LOC}
    RIX_CORE_COLOR_BUFFER_LOC_0=${RIX_CORE_COLOR_BUFFER_LOC_0}
    RIX_CORE_COLOR_BUFFER_LOC_1=${RIX_CORE_COLOR_BUFFER_LOC_1}
    RIX_CORE_COLOR_BUFFER_LOC_2=${RIX_CORE_COLOR_BUFFER_LOC_2}
    RIX_CORE_DEPTH_BUFFER_LOC=${RIX_CORE_DEPTH_BUFFER_LOC}
    RIX_CORE_STENCIL_BUFFER_LOC=${RIX_CORE_STENCIL_BUFFER_LOC}
    RIX_CORE_THREADED_RASTERIZATION=${RIX_CORE_THREADED_RASTERIZATION}
    RIX_CORE_THREADED_RASTERIZATION_DISPLAY_LIST_SIZE=${RIX_CORE_THREADED_RASTERIZATION_DISPLAY_LIST_SIZE}
    RIX_CORE_ENABLE_VSYNC=${RIX_CORE_ENABLE_VSYNC}
    RIX_CORE_MAX_VBO_COUNT=${RIX_CORE_MAX_VBO_COUNT}
    RIX_CORE_PERFORMANCE_MODE=${RIX_CORE_PERFORMANCE_MODE}
    RIX_CORE_SOFTWARE_RASTERIZATION=${RIX_CORE_SOFTWARE_RASTERIZATION}
)
